# Photon

./: .gitignore  meson.build
docs/: Keywords.md  Syntax.md
examples/: main.pht
internal/: internal_functions.c  internal_functions.h  internal_operations.c  internal_operations.h  meson.build
logging/: logger.c  logger.h  meson.build
src/: AST.c  internals_api.c  lexer.c  macros.c  main.c  parser.c  reader.c  token.c  visitor.c
src/include/: AST.h  internals_api.h  lexer.h  macros.h  parser.h  reader.h  token.h  visitor.h
